<resources>
    <string name="app_name">Transporte Micros</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="ya_tienes_cuenta">¿Ya tienes cuenta?</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="acepto_los_t_rminos_y_condiciones">Acepto los términos y condiciones</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="contrase_a">Contraseña</string>
    <string name="tel_fono">Teléfono</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="registro_de_usuario">Registro de Usuario</string>
    <string name="transporteya">TransporteYA</string>
    <string name="transporteyaa">TransporteYA</string>
    <string name="hola_usuario">¡Hola, Usuario!</string>
    <string name="santa_cruz_bolivia">Santa Cruz, Bolivia</string>
</resources>